# zenn-py-api

./: README.md  main.py  pyproject.toml  secrets.json
zenn_py_api/: getArticles.py
